# enigma2-openvision-sh4

./: .gitignore  .travis.yml  Navigation.py  README.md  RecordTimer.py  ServiceReference.py  configure.ac  configure_BACKUP_27792.ac  enigma2.bb  keyids.py  mytest.py  skin.py  translate.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  skin_default.xml  skin_text_hl101.txt  startwizard.xml
data/display/: skin_text_spark.xml
data/rc_models/: Makefile.am  adb.xml  adb_xmp.xml  atevio7500.xml  cuberevo.xml  cuberevo_uni.xml  fs9000.xml  hl101.xml  hs7110.xml  hs9510.xml  octagon1008.xml  opt9600.xml  pace7241.xml  qbox.xml  qboxmini.xml  rc_models.cfg  rc_models.cfg.orig  spark.xml  tf7700.xml  ufs910.xml  ufs912.xml  ufs913.xml  vip2_1.xml  vip_1.xml  vitamin.xml
data/skin_default/: Makefile.am
lib/: Makefile.am
lib/actions/: parseactions.py
lib/base/: console.cpp  ebase.cpp  httpstream.cpp  message.h  object.h
lib/components/: scan.cpp
lib/driver/: Makefile.inc  fpqboxmini.cpp  fpqboxmini.h  frontpanel.h  hdmi_cec.cpp  hdmi_cec.h  qboxhd_generic.h  rc.cpp  rcinput.cpp  rcqbox2.cpp  rcqbox2.h  swqbox2.cpp  swqbox2.h  tftypes.h  vfd.cpp  vfd.h
lib/dvb/: Makefile.inc  db.cpp  db.cpp.orig  decoder.cpp  decoder.h  demux.cpp  demux.h  dvb.cpp  dvb.h  dvbtime.cpp  epgcache.cpp  filepush.cpp  filepush.h  frontend.cpp  frontend.cpp.orig  frontend.h  frontendparms.cpp  frontendparms.h  idvb.h  pmt.cpp  pmt.h  pmtparse.cpp  pmtparse.h  pvrparse.cpp  scan.cpp  sec.cpp  teletext.cpp  volume.cpp
lib/dvb_ci/: dvbci.cpp  dvbci.h  dvbci.h.orig  dvbci_appmgr.cpp  dvbci_mmi.cpp  dvbci_resmgr.cpp  dvbci_session.cpp
lib/gdi/: Makefile.inc  accel.cpp  accel.h  epng.cpp  fb.cpp  fb.h  font.cpp  font.h  gfbdc.cpp  glcddc.cpp  (+14 more)
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/ADBVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/ADBVFD/meta/: Makefile.am  plugin_adbvfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/CuberevoVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/CuberevoVFD/meta/: Makefile.am  plugin_cuberevovfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/CutListEditor/: keymap.xml
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py  settings.py
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/TopfieldVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/TopfieldVFD/meta/: Makefile.am  plugin_topfieldvfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/fs9000VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/fs9000VFD/meta/: Makefile.am  plugin_fs9000vfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs7110VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs7110VFD/meta/: Makefile.am  plugin_hs7110vfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs742xVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs742xVFD/meta/: Makefile.am  plugin_hs742xvfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs7810aVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs7810aVFD/meta/: Makefile.am  plugin_hs7810avfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs8200VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs8200VFD/meta/: Makefile.am  plugin_hs8200vfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs9510VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs9510VFD/meta/: Makefile.am  plugin_hs9510vfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/pace7241VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/pace7241VFD/meta/: Makefile.am  plugin_pace7241vfd.xml
lib/python/Plugins/Extensions/spark7162VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/spark7162VFD/meta/: Makefile.am  plugin_spark7162vfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/Extensions/sparkVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/sparkVFD/meta/: Makefile.am  plugin_sparkvfd.xml  plugin_vfd-icons.xml
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py.orig
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py  plugin.py.orig
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/KeymapManager/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/OnErrorRestartService/: plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py.orig
lib/python/Plugins/SystemPlugins/SH4BoosterControl/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/SH4OSDAdjustment/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py.orig
lib/python/Plugins/SystemPlugins/SkinSelector/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py
lib/python/Plugins/SystemPlugins/SparkUnionTunerType/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/SparkUnionTunerType/meta/: Makefile.am  plugin_sparkuniontunertype.xml
lib/python/Plugins/SystemPlugins/SparkVFDControl/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/SparkVFDControl/meta/: Makefile.am  plugin_sparkvfdcontrol.xml
lib/python/Plugins/SystemPlugins/VFD-Icons/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/VideoClippingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoTune/: VideoFinetune.py
lib/python/Plugins/SystemPlugins/Videomode/: Makefile.am  VideoHardware.py  VideoWizard.py  plugin.py  plugin.py.orig
main/: Makefile.am  bsod.cpp  enigma.cpp  enigma.cpp.orig
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  updateallpo.sh  vi.po  (+2 more)
tests/: enigma.py
tools/: enigma2.sh.in
(+133 files in other folders)
