installdir = $(pkgdatadir)/rc_models

dist_install_DATA = \
	rc_models.cfg \
	adb.png adb.xml atevio7500.png atevio7500.xml cuberevo_uni.png cuberevo_uni.xml \
	fs9000.png fs9000.xml hl101.png hl101.xml hs7110.png hs7110.xml hs9510.png hs9510.xml \
	qbox.png qbox.xml qboxmini.png qboxmini.xml spark.png spark.xml tf7700.png tf7700.xml \
	ufs912.png ufs912.xml vitamin.png vitamin.xml
