installdir = $(pkgdatadir)/rc_models

dist_install_DATA = \
	rc_models.cfg \
	adb_xmp.png adb_xmp.xml cuberevo_uni.png cuberevo_uni.xml \
	fs9000.png fs9000.xml hl101.png hl101.xml hs7110.png hs7110.xml hs9510.png hs9510.xml \
	qbox.png qbox.xml qboxmini.png qboxmini.xml pace7241.png pace7241.xml spark.png spark.xml \
	tf7700.png tf7700.xml ufs912.png ufs912.xml vitamin.png vitamin.xml vip2_1.png vip2_1.xml
